Cambiando puerto de frontend a 8081

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,20 @@
-# Usa una imagen base oficial de Python
-FROM python:3.9-slim
+FROM python:3.11-slim
 
-# Establece el directorio de trabajo dentro del contenedor
+# Establece el directorio de trabajo
 WORKDIR /app
 
-# Copia el archivo de dependencias y las instala
+# Copia el archivo de dependencias
 COPY requirements.txt .
-RUN pip install -r requirements.txt
 
-# Copia el resto del código de la aplicación
+# Instala las dependencias
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copia el resto del código
 COPY . .
 
-# Expone el puerto 5000, donde se ejecuta Flask
+# Expone el puerto
 EXPOSE 5000
 
-# Comando para ejecutar la aplicación cuando el contenedor se inicie
-CMD ["python", "app.py"]
+# Comando para ejecutar con Gunicorn en producción
+# Para desarrollo, puedes comentar esta línea y usar CMD ["python", "app.py"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "2", "--timeout", "120", "app:app"]
