Corrigiendo Codecov Token

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,5 +55,5 @@ jobs:
           files: backend/coverage.xml
           fail_ci_if_error: true
         env:
-          #CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
           # solo si el repo es privado
